Rutas de imagenes corregidas a relativas y barras inclinadas

--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
             </h2>
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <p class="text-lg mb-4">
-                    Hola, soy **[Tu Nombre Completo]**, estudiante de **[Tu Carrera]**. Este portafolio documenta mi progreso y habilidades adquiridas en la asignatura de **Desarrollo Lógico y Algorítmico**. Mi enfoque está en la **eficiencia del código**, la **claridad del seudocódigo** y la **aplicación de estructuras de datos** para resolver problemas del mundo real.
+                    Hola, soy **Jafet Loo**, estudiante de **Ingenieria Mecanica**. Este portafolio documenta mi progreso y habilidades adquiridas en la asignatura de **Desarrollo Lógico y Algorítmico**. Mi enfoque está en la **eficiencia del código**, la **claridad del seudocódigo** y la **aplicación de estructuras de datos** para resolver problemas del mundo real.
                 </p>
                 <div class="space-y-2 text-gray-600">
-                    <p>📧 Correo Electrónico: <a href="mailto:tu.correo@ejemplo.com" class="text-blue-600 hover:underline">[tu.correo@ejemplo.com]</a></p>
-                    <p>🐙 Perfil de GitHub: <a href="https://github.com/tu-usuario" target="_blank" class="text-blue-600 hover:underline">github.com/tu-usuario</a></p>
-                    <p>🏫 Institución: [Nombre de tu Universidad/Instituto]</p>
+                    <p>📧 Correo Electrónico: <a href="loocedenojafet@gmail.com" class="text-blue-600 hover:underline">[tu.correo@ejemplo.com]</a></p>
+                    <p>🐙 Perfil de GitHub: <a href="https://github.com/Jafet Loo" target="_blank" class="text-blue-600 hover:underline">github.com/tu-usuario</a></p>
+                    <p>🏫 Institución: Universidad Tecnologica de Panama </p>
                 </div>
             </div>
         </section>
