--- a/proyectos/examenparcial_2.html
+++ b/proyectos/examenparcial_2.html
@@ -158,7 +158,7 @@
 
             </p>
 
-            <img src="https://github.com/user-attachments/assets/252b231c-39fd-4c88-b312-d04c71cee212" alt="Pantalla del instalador de Ubuntu Server en VirtualBox mostrando opciones de configuración de red en modo Adaptador Puente y la asignación de 2 GB RAM y 2 CPUs; entorno de máquina virtual, tono informativo" class="w-full h-auto">
+            <img src="/imagenes/mv1.png" alt="Pantalla del instalador de Ubuntu Server en VirtualBox mostrando opciones de configuración de red en modo Adaptador Puente y la asignación de 2 GB RAM y 2 CPUs; entorno de máquina virtual, tono informativo" class="w-full h-auto">
 
             <div class="image-placeholder">Captura de la configuración de la VM (Adaptador Puente)</div>
 
@@ -172,7 +172,7 @@
 
             </p>
 
-            <img src="https://github.com/user-attachments/assets/7b00aacc-b9c7-44fb-b863-ba88fd027387" alt="Ventana de terminal con sesión de MySQL activa usando el usuario chinos_user que muestra la lista de tablas del esquema chinos_cafe; consola en fondo oscuro, tono informativo" class="w-full h-auto">
+            <img src="/imagenes/mv2.png" alt="Ventana de terminal con sesión de MySQL activa usando el usuario chinos_user que muestra la lista de tablas del esquema chinos_cafe; consola en fondo oscuro, tono informativo" class="w-full h-auto">
 
             <div class="image-placeholder">Terminal mostrando la ejecución de `mysql -u chinos_user -p` y las tablas de `chinos_cafe`</div>
 
@@ -200,7 +200,7 @@
 
             </p>
 
-            <img src="https://github.com/user-attachments/assets/3d35328b-ad52-403b-8e3b-29a14f58cb89" alt="Diagrama de red en Cisco Packet Tracer con un router gateway, un switch central, un servidor Linux con IP 192.168.1.10 y varias laptops cliente en la subred 192.168.1.0/24; topología LAN, tono técnico" class="w-full h-auto">
+            <img src="/imagenes/mv3.png" alt="Diagrama de red en Cisco Packet Tracer con un router gateway, un switch central, un servidor Linux con IP 192.168.1.10 y varias laptops cliente en la subred 192.168.1.0/24; topología LAN, tono técnico" class="w-full h-auto">
 
             <div class="image-placeholder">Esquema de la Red LAN en Packet Tracer (Servidor, Switch y Clientes)</div>
 
@@ -214,7 +214,7 @@
 
             </p>
 
-            <img src="https://github.com/user-attachments/assets/29e917ba-1fd3-40aa-be10-20d490e2fc49" alt="Salida de terminal que muestra resultados de ping hacia 192.168.1.10 con tiempos de respuesta y recuento de paquetes recibidos; confirma conectividad entre cliente y servidor, tono comprobatorio" class="w-full h-auto">
+            <img src="/imagenes/mv4.png" alt="Salida de terminal que muestra resultados de ping hacia 192.168.1.10 con tiempos de respuesta y recuento de paquetes recibidos; confirma conectividad entre cliente y servidor, tono comprobatorio" class="w-full h-auto">
 
             <div class="image-placeholder">Captura de pantalla de un `ping` exitoso a 192.168.1.10</div>
 
@@ -324,7 +324,7 @@ FinAlgoritmo</code></pre>
 
             </p>
 
-            <img src="https://github.com/user-attachments/assets/3d073dd5-ffe0-47c4-8631-bd70a0bb0df1" alt="Diagrama de flujo del subproceso CarritoVenta que muestra selección de artículos, verificación de stock, cálculo del total, cobro y registro en la base de datos; incluye decisiones y pasos secuenciales, tono instructivo" class="w-full h-auto">
+            <img src="/imagenes/mv5.png" alt="Diagrama de flujo del subproceso CarritoVenta que muestra selección de artículos, verificación de stock, cálculo del total, cobro y registro en la base de datos; incluye decisiones y pasos secuenciales, tono instructivo" class="w-full h-auto">
 
             <div class="image-placeholder">Diagrama de Flujo del Proceso de Venta (Carrito -> Cobro -> BD)</div>
 
@@ -534,7 +534,7 @@ if __name__ == "__main__":
 
             </p>
 
-            <img src="https://github.com/user-attachments/assets/930905eb-0f35-411a-a39f-ea6059557d73" alt="Consola de Python mostrando mensaje Conexión a MySQL exitosa y el menú principal con opciones 1 Iniciar Sesión 2 Ver Inventario 3 Carrito de Venta y Cobro 4 Cambiar Sucursal 0 Salir; interfaz de texto, tono funcional" class="w-full h-auto">
+            <img src="/imagenes/mv6.png" alt="Consola de Python mostrando mensaje Conexión a MySQL exitosa y el menú principal con opciones 1 Iniciar Sesión 2 Ver Inventario 3 Carrito de Venta y Cobro 4 Cambiar Sucursal 0 Salir; interfaz de texto, tono funcional" class="w-full h-auto">
 
             <div class="image-placeholder">Captura de la consola de Python mostrando la Conexión Exitosa y el Menú Principal</div>
 
