--- a/proyectos/INVESTIGACION2.html
+++ b/proyectos/INVESTIGACION2.html
@@ -118,7 +118,7 @@
 
             <!-- IMAGEN 1: DAFO/FODA -->
             <div class="image-container">
-                <img src="https://github.com/user-attachments/assets/96d44547-3fcb-4e68-932c-6ec86d38dfe6" 
+                <img src="/imagen/ds1.png" 
                      onerror="this.onerror=null; this.src='https://placehold.co/800x250/ccc/333?text=IMAGEN+NO+DISPONIBLE';"
                      alt="Diagrama del Análisis DAFO IDE Python vs Lenguaje C" 
                      class="w-full h-auto max-w-lg rounded-lg shadow-xl"
@@ -147,7 +147,7 @@
 
             <!-- IMAGEN 2: CONFIGURACIÓN DE RED EN VM -->
             <div class="image-container">
-                <img src="https://github.com/user-attachments/assets/fddbc502-a4cf-4106-80a9-27e2e91133a2" 
+                <img src="/imagenes/ds2.png" 
                      onerror="this.onerror=null; this.src='https://placehold.co/700x350/ccc/333?text=IMAGEN+NO+DISPONIBLE';"
                      alt="Configuración del Adaptador de Red en modo Puente de la Máquina Virtual" 
                      class="w-full h-auto max-w-lg rounded-lg shadow-xl"
@@ -185,7 +185,7 @@
 
             <!-- IMAGEN 3: DIRECCIONAMIENTO IP DEL SERVIDOR -->
             <div class="image-container">
-                <img src="https://github.com/user-attachments/assets/39400b30-50f4-4c3d-9e41-fd0ac0650f41" 
+                <img src="/imagenes/ds3.png" 
                      onerror="this.onerror=null; this.src='https://placehold.co/700x350/ccc/333?text=IMAGEN+NO+DISPONIBLE';"
                      alt="Comando ip a para verificar la IP del servidor Linux" 
                      class="w-full h-auto max-w-lg rounded-lg shadow-xl"
@@ -220,7 +220,7 @@ sudo systemctl status vsftpd
             
             <!-- IMAGEN 4: PRUEBA SSH (CONEXIÓN DESDE LA LAPTOP) -->
             <div class="image-container">
-                <img src="https://github.com/user-attachments/assets/ff63eda7-f55a-479a-8c71-3687002f184a" 
+                <img src="/imagenes/ds4.png" 
                      onerror="this.onerror=null; this.src='https://placehold.co/700x350/ccc/333?text=IMAGEN+NO+DISPONIBLE';"
                      alt="Prueba de conexión SSH exitosa a Servidor de Datos Linux" 
                      class="w-full h-auto max-w-lg rounded-lg shadow-xl"
@@ -326,7 +326,7 @@ sudo systemctl status vsftpd
 
             <!-- IMAGEN 6: ESQUEMA DE RED LAN EN PACKET TRACER -->
             <div class="image-container">
-                <img src="https://github.com/user-attachments/assets/30cbcb85-1df2-4811-8a77-9741e2912dd1" 
+                <img src="/imagenes/ds5.png" 
                      onerror="this.onerror=null; this.src='https://placehold.co/800x400/ccc/333?text=IMAGEN+NO+DISPONIBLE';"
                      alt="Esquema de Red LAN diseñado en Cisco Packet Tracer" 
                      class="w-full h-auto max-w-lg rounded-lg shadow-xl"
