Corregir rutas de imagen en index y actualizar archivos de proyectos

--- a/proyectos/INVESTIGACION2.html
+++ b/proyectos/INVESTIGACION2.html
@@ -147,7 +147,7 @@
 
             <!-- IMAGEN 2: CONFIGURACIÓN DE RED EN VM -->
             <div class="image-container">
-                <img src="/imagenes/ds2.png" 
+                <img src="imagenes/ds2.png" 
                      onerror="this.onerror=null; this.src='https://placehold.co/700x350/ccc/333?text=IMAGEN+NO+DISPONIBLE';"
                      alt="Configuración del Adaptador de Red en modo Puente de la Máquina Virtual" 
                      class="w-full h-auto max-w-lg rounded-lg shadow-xl"
@@ -185,7 +185,7 @@
 
             <!-- IMAGEN 3: DIRECCIONAMIENTO IP DEL SERVIDOR -->
             <div class="image-container">
-                <img src="/imagenes/ds3.png" 
+                <img src="imagenes/ds3.png" 
                      onerror="this.onerror=null; this.src='https://placehold.co/700x350/ccc/333?text=IMAGEN+NO+DISPONIBLE';"
                      alt="Comando ip a para verificar la IP del servidor Linux" 
                      class="w-full h-auto max-w-lg rounded-lg shadow-xl"
@@ -220,7 +220,7 @@ sudo systemctl status vsftpd
             
             <!-- IMAGEN 4: PRUEBA SSH (CONEXIÓN DESDE LA LAPTOP) -->
             <div class="image-container">
-                <img src="/imagenes/ds4.png" 
+                <img src="imagenes/ds4.png" 
                      onerror="this.onerror=null; this.src='https://placehold.co/700x350/ccc/333?text=IMAGEN+NO+DISPONIBLE';"
                      alt="Prueba de conexión SSH exitosa a Servidor de Datos Linux" 
                      class="w-full h-auto max-w-lg rounded-lg shadow-xl"
@@ -326,7 +326,7 @@ sudo systemctl status vsftpd
 
             <!-- IMAGEN 6: ESQUEMA DE RED LAN EN PACKET TRACER -->
             <div class="image-container">
-                <img src="/imagenes/ds5.png" 
+                <img src="imagenes/ds5.png" 
                      onerror="this.onerror=null; this.src='https://placehold.co/800x400/ccc/333?text=IMAGEN+NO+DISPONIBLE';"
                      alt="Esquema de Red LAN diseñado en Cisco Packet Tracer" 
                      class="w-full h-auto max-w-lg rounded-lg shadow-xl"
