--- a/proyectos/proyecto_1.html
+++ b/proyectos/proyecto_1.html
@@ -93,7 +93,7 @@
 
             <div class="image-container">
                 <!-- Por favor, reemplaza la URL de ejemplo por la URL de tu Infografía real -->
-                <img src="/imagenes/Infografía.jpg" 
+                <img src="imagenes/Infografía.jpg" 
                      alt="Infografía sobre la Historia de la Programación" 
                      onerror="this.onerror=null; this.src='https://placehold.co/800x400/3B82F6/FFFFFF?text=IMAGEN+DE+INFOGRAFIA';">
             </div>
@@ -150,7 +150,7 @@
             
             <div class="image-container mt-4">
                 <!-- Por favor, reemplaza la URL de ejemplo por la URL de tu Hexagrama/Mapa Mental real -->
-                <img src="/imagenes/Hexagrama.jpg" 
+                <img src="imagenes/Hexagrama.jpg" 
                      alt="Hexagrama o Mapa Mental de Conceptos de Programación" 
                      onerror="this.onerror=null; this.src='https://placehold.co/800x400/3B82F6/FFFFFF?text=IMAGEN+DE+HEXAGRAMA';">
             </div>
