--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
             </h2>
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <p class="text-lg mb-4">
-                    Hola, soy **Jafet Loo**, estudiante de **Ingenieria Mecanica**. Este portafolio documenta mi progreso y habilidades adquiridas en la asignatura de **Desarrollo Lógico y Algorítmico**. Mi enfoque está en la **eficiencia del código**, la **claridad del seudocódigo** y la **aplicación de estructuras de datos** para resolver problemas del mundo real.
+                    Hola, soy Jafet Loo, estudiante de Ingenieria Mecanica. Este portafolio documenta mi progreso y habilidades adquiridas en la asignatura de Desarrollo Lógico y Algorítmico. Mi enfoque está en la eficiencia del código, la claridad del seudocódigo y la aplicación de estructuras de datos para resolver problemas del mundo real.
                 </p>
                 <div class="space-y-2 text-gray-600">
-                    <p>📧 Correo Electrónico: <a href="loocedenojafet@gmail.com" class="text-blue-600 hover:underline">[tu.correo@ejemplo.com]</a></p>
-                    <p>🐙 Perfil de GitHub: <a href="https://github.com/Jafet Loo" target="_blank" class="text-blue-600 hover:underline">github.com/tu-usuario</a></p>
+                    <p>📧 Correo Electrónico: <a href="loocedenojafet@gmail.com" class="text-blue-600 hover:underline">[loocedenojafet@gmail.com]</a></p>
+                    <p>🐙 Perfil de GitHub: <a href="https://github.com/Jafet Loo" target="_blank" class="text-blue-600 hover:underline">https://github.com/Jafet Loo</a></p>
                     <p>🏫 Institución: Universidad Tecnologica de Panama </p>
                 </div>
             </div>
@@ -135,7 +135,7 @@
 
     <footer class="bg-gray-800 text-white mt-12 py-6">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <p class="text-sm">&copy; 2025 Portafolio DLA - [Tu Nombre]. Todos los derechos reservados.</p>
+            <p class="text-sm">&copy; 2025 Portafolio DLA - [Jafet Loo]. Todos los derechos reservados.</p>
             <p class="text-xs mt-1 opacity-75">Construido para la asignatura de Desarrollo Lógico y Algorítmico.</p>
         </div>
     </footer>
