--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="bg-white p-6 rounded-lg card-shadow transition duration-300 border-t-4 border-yellow-500">
-                    <h3 class="text-xl font-semibold mb-2 text-yellow-700">Examen Parcial 1: [Título del Proyecto]</h3>
+                    <h3 class="text-xl font-semibold mb-2 text-yellow-700">Examen Parcial 1: Estructuras Condicionales y Lógica de Fechas</h3>
                     <p class="text-sm text-gray-500 mb-3">Archivos: `examen_parcial1.html`</p>
                     <p class="mb-4">Documentación de la aplicación de estructuras de control (secuenciales, alternativas, repetitivas) para la resolución de un caso de estudio específico.</p>
                     <a href="./proyectos/examen_parcial1.html" class="inline-block bg-yellow-500 text-white px-4 py-2 rounded-lg text-sm hover:bg-yellow-700 transition duration-300 font-medium">Ver Solución</a>
@@ -92,21 +92,21 @@
                 </div>
 
                 <div class="bg-white p-6 rounded-lg card-shadow transition duration-300 border-t-4 border-indigo-500">
-                    <h3 class="text-xl font-semibold mb-2 text-indigo-700">Ejercicio Práctico 1: [Detalle del Ejercicio]</h3>
+                    <h3 class="text-xl font-semibold mb-2 text-indigo-700">Ejercicio Práctico 1: Estructuras Secuenciales y Condicionales</h3>
                     <p class="text-sm text-gray-500 mb-3">Archivos: `ejercicio_practico1.html`</p>
                     <p class="mb-4">Ejercicio complementario que aborda un problema específico con énfasis en el uso correcto de bucles o funciones para optimizar el código.</p>
                     <a href="./proyectos/ejercicio_practico1.html" class="inline-block bg-indigo-500 text-white px-4 py-2 rounded-lg text-sm hover:bg-indigo-700 transition duration-300 font-medium">Ver Solución</a>
                 </div>
 
                 <div class="bg-white p-6 rounded-lg card-shadow transition duration-300 border-t-4 border-red-500">
-                    <h3 class="text-xl font-semibold mb-2 text-red-700">Proyecto 1: Sistema XYZ (Alquiler de Equipos)</h3>
+                    <h3 class="text-xl font-semibold mb-2 text-red-700">Proyecto 1</h3>
                     <p class="text-sm text-gray-500 mb-3">Archivos: `proyecto_1.html`</p>
-                    <p class="mb-4">Prototipo de pseudocódigo, programa Python y Red LAN para gestionar el alquiler, cálculo de costo, registro y facturación de equipos de la empresa XYZ.</p>
+                    <p class="mb-4">Historia y Conceptos Fundamentales de la Programación.</p> 
                     <a href="./proyectos/proyecto_1.html" class="inline-block bg-red-500 text-white px-4 py-2 rounded-lg text-sm hover:bg-red-700 transition duration-300 font-medium">Ver Solución Completa</a>
                 </div>
                 
                 <div class="bg-white p-6 rounded-lg card-shadow transition duration-300 border-t-4 border-gray-400">
-                    <h3 class="text-xl font-semibold mb-2 text-gray-700">Investigación 2: [Título del Tema]</h3>
+                    <h3 class="text-xl font-semibold mb-2 text-gray-700">Investigación 2: Informe de Investigación 2</h3>
                     <p class="text-sm text-gray-500 mb-3">Archivos: `INVESTIGACION2.html`</p>
                     <p class="mb-4">Documentación de un segundo tema de investigación del curso, detallando conceptos, sintaxis y ejemplos de código relevantes.</p>
                     <a href="./proyectos/INVESTIGACION2.html" class="inline-block bg-gray-500 text-white px-4 py-2 rounded-lg text-sm hover:bg-gray-700 transition duration-300 font-medium">Ver Documento</a>
