--- a/proyectos/INVESTIGACION2.html
+++ b/proyectos/INVESTIGACION2.html
@@ -70,7 +70,7 @@
             <ul class="space-y-2 text-gray-700">
                 <li><span class="font-medium text-gray-900">Asignatura:</span> Desarrollo Lógico Y Algoritmo</li>
                 <li><span class="font-medium text-gray-900">Profesor:</span> Napoleón Ibarra</li>
-                <li><span class="font-medium text-gray-900">Estudiantes:</span> [Tu Nombre y Cédula], [Nombre del Compañero y Cédula]</li>
+                <li><span class="font-medium text-gray-900">Estudiante:</span> Jafet Loo 4-838-349</li>
                 <li><span class="font-medium text-gray-900">Fecha de Entrega:</span> 30/09/2025</li>
             </ul>
         </section>
