--- a/proyectos/tallerpractico1.html
+++ b/proyectos/tallerpractico1.html
@@ -66,8 +66,8 @@
             <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 mb-2">Taller Práctico 1: Fundamentos Algorítmicos y Bases de Datos</h1>
             <h2 class="text-xl sm:text-2xl font-semibold text-gray-600">Investigación, Desarrollo y Prototipo (Asignatura: Desarrollo Lógico y Algoritmo)</h2>
             <div class="mt-6 grid grid-cols-2 gap-4 text-base text-gray-500">
-                <div><span class="font-medium text-gray-800">Estudiante:</span> [Tu Nombre Aquí]</div>
-                <div><span class="font-medium text-gray-800">Cédula:</span> [Tu Cédula Aquí]</div>
+                <div><span class="font-medium text-gray-800">Estudiante:</span> Jafet Loo </div>
+                <div><span class="font-medium text-gray-800">Cédula:</span> 4-838-349</div>
             </div>
         </header>
 
